
SUBDIRS = gTAG lightning_detector RF_Amp TwoStageAmp

exampledir = $(docdir)/examples/

example_DATA = README 

EXTRA_DIST = ChangeLog-1.0 $(example_DATA)

MOSTLYCLEANFILES = *.log core FILE *~ 
CLEANFILES = *.log core FILE *~ 
DISTCLEANFILES = *.log core FILE *~
MAINTAINERCLEANFILES = *.log core FILE *~
