SUBDIRS = po src include lib design docs data

EXTRA_DIST = BUGS NOTES README ChangeLog ChangeLog-1.0 AUTHORS \
	INSTALL ToDos

MOSTLYCLEANFILES = *.log core FILE *~ #*#
CLEANFILES = *.log core FILE *~ #*#
DISTCLEANFILES = *.log core FILE *~
MAINTAINERCLEANFILES = *.log core FILE *~ Makefile.in #*#
